 * Fixed bug where upload paths with \'s in them kept getting escaped over and over
 * Pulled PHP compatibility code out into core_php_API.php
 * Removed $g_register_globals variable and just check the actual value of the PHP config variable
 * Added core_error_API.php with a new pretty error handler and error_string() to obtain internationalized error strings

2002.08.23  -  0.17.5
 * Fixed problem where you could see public bugs if all projects were marked private (#2341)

2002.08.19  -  0.17.4a
 * Fixed the fix of the ambigious column problem
 * Fixed the 'second line of defense' against the arbitrary-code-execution vulnerability

2002.08.18  -  0.17.4
 * This is a maintenance release. It patches up several vulnerabilities in 0.17.3. No features have been added.
 * Fixed a problem in config_inc2.php, which would allow a malicious user to execute arbitrary code and view any local file available to the webserver-user.
 * Fixed a problem in summary_graph_functions.php, which just allowed a malicious user to execute arbitrary code.
 * Fixed a problem in print_all_bug_page.php, which allowed reporters to see bugs they hadn't reported, even when $g_limit_reporters is set to ON.
 * Fixed a problem in view_all_bug_page.php, which allowed any user to see the summaries of public bugs in private projects, by manipulation of the project cookie.
 * Modified admin_check.php to prevent use by spammers.
 * Modified the database upgrade script to prevent someone from accidentally or intentionally running the scripts on an updated database.
 * Fixed a problem in core_user_API.php, which probably caused the infinite-redirect problem in Mozilla/Opera browsers.
 * Fixed a problem with ambigious columns in view_all_bug_page.php

2002.05.19  -  0.17.3

 * Bumped version number.
 * Fixed problem with CSV not downloading.
 * Fixed no colors when using non-English languages (temporary fix).
 * Fixed bug_close to add bugnote.
 * Fixed file uploads to not show up for VIEWERS.