@@ -6,22 +6,17 @@
 	# See the README and LICENSE files for details
 ?>
 <?php
-	# Delete the bug, bugtext, bugnote, and bugtexts selected
-	# Redirects to view_all_bug_page.php3
+	# Deletes the bug and re-directs to view_all_bug_page.php 
 ?>
 <?php include( 'core_API.php' ) ?>
 <?php login_cookie_check() ?>
 <?php
 	project_access_check( $f_id );
-	check_access( $g_handle_bug_threshold );
 	check_access( $g_allow_bug_delete_access_level );
 	check_bug_exists( $f_id );
 
-	bug_delete( $f_id, $f_bug_text_id );
-
-	$t_redirect_url = 'view_all_bug_page.php';
-	if ( $result ) {
-		print_header_redirect( $t_redirect_url );
+	if ( bug_delete( $f_id, $f_bug_text_id ) ) {
+		print_header_redirect( 'view_all_bug_page.php' );
 	} else {
 		print_mantis_error( ERROR_GENERIC );
 	}
