@@ -15,9 +15,9 @@
 	check_bugnote_exists( $f_bugnote_id );
 	$t_bug_id = get_bugnote_field( $f_bugnote_id, 'bug_id' );
 	project_access_check( $t_bug_id );
-	check_access( REPORTER );
+	check_access( $g_delete_bugnote_threshold );
 	check_bug_exists( $t_bug_id );
-	
+
 	$result = bugnote_delete( $f_bugnote_id );
 
 	# Determine which view page to redirect back to.
