@@ -15,7 +15,7 @@
 	check_bugnote_exists( $f_bugnote_id );
 	$t_bug_id = get_bugnote_field( $f_bugnote_id, 'bug_id' );
 	project_access_check( $t_bug_id );
-	check_access( $g_handle_bug_threshold );
+	check_access( $g_delete_bugnote_threshold );
 	check_bug_exists( $t_bug_id );
 ?>
 <?php print_page_top1() ?>
