@@ -102,6 +102,8 @@ Mantis ChangeLog
  * Pulled PHP compatibility code out into core_php_API.php
  * Removed $g_register_globals variable and just check the actual value of the PHP config variable
  * Added core_error_API.php with a new pretty error handler and error_string() to obtain internationalized error strings
+ * Added $g_delete_bugnote_threshold.
+ * Added $g_update_bug_threshold.
 
 2002.08.23  -  0.17.5
  * Fixed problem where you could see public bugs if all projects were marked private (#2341)
